cashier platform initialized

--- a/MarketManagementSystem/Views/Shared/_layout.cshtml
+++ b/MarketManagementSystem/Views/Shared/_layout.cshtml
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Market Management System</title>
   <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="~/css/global.css" asp-append-version="true">
 </head>
 
 <body>
@@ -28,6 +29,9 @@
             <li class="nav-item">
               <a class="nav-link text-dark" asp-controller="products" asp-action="index">Products</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" asp-controller="sales" asp-action="index">Sales</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -43,6 +47,8 @@
     </div>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+    integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
   @await RenderSectionAsync("Scripts", required: false)
 </body>
 
