transactions report with print option

--- a/MarketManagementSystem/Views/Shared/_layout.cshtml
+++ b/MarketManagementSystem/Views/Shared/_layout.cshtml
@@ -30,6 +30,9 @@
               <a class="nav-link text-dark" asp-controller="products" asp-action="index">Products</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link text-dark" asp-controller="transactions" asp-action="index">Transactions</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-dark" asp-controller="sales" asp-action="index">Sales</a>
             </li>
           </ul>
@@ -39,7 +42,7 @@
   </header>
   <div class="container">
     <div class="pb-3">
-      @RenderSection("title")
+      @RenderSection("title", false)
       <hr>
     </div>
     <div>
@@ -49,6 +52,7 @@
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
     integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+  <script src="~/lib/print-jquery/jQuery.print.min.js"></script>
   @await RenderSectionAsync("Scripts", required: false)
 </body>
 
