--- a/MarketManagementSystem/Views/Categories/_form.cshtml
+++ b/MarketManagementSystem/Views/Categories/_form.cshtml
@@ -11,7 +11,7 @@
   <div class="text-danger" asp-validation-summary="All"></div>
   <div class="row mb-3">
     <div class="col-2">
-      <label asp-for="Name" class="col-from-label"></label>
+      <label asp-for="Name" class="col-form-label"></label>
     </div>
     <div class="col-6">
       <input type="text" asp-for="Name" class="form-control" />
@@ -22,7 +22,7 @@
   </div>
   <div class="row mb-3">
     <div class="col-2">
-      <label asp-for="Description" class="col-from-label"></label>
+      <label asp-for="Description" class="col-form-label"></label>
     </div>
     <div class="col-6">
       <input type="text" asp-for="Description" class="form-control" />
